--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ plugins:
 
 author:
   name   : "Ahmad A'fif bin Zulkifli"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/me.jpeg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
     - label: "Website"
