--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
-    - label: "GitHub"
+    - label: "cryst4lliz3"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/cryst4lliz3/"
 
@@ -62,7 +62,7 @@ footer:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
-    - label: "GitHub"
+    - label: "cryst4lliz3"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/cryst4lliz3/"
 
