--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-twitter_username: username
+twitter_username: _cryst4lliz3
 github_username: cryst4lliz3
 minimal_mistakes_skin: default
 search: true
@@ -47,21 +47,21 @@ author:
   avatar : "/assets/images/me.jpg"
   bio    : "My awesome biography constrained to a sentence or two goes here."
   links:
-    - label: "Website"
+    - label: "cryst4lliz3.github.io"
       icon: "fas fa-fw fa-link"
       url: "https://cryst4lliz3.github.io/"
-    - label: "Twitter"
+    - label: "_cryst4lliz3"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/_cryst4lliz3"
     - label: "cryst4lliz3"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/cryst4lliz3/"
 
 footer:
   links:
-    - label: "Twitter"
+    - label: "_cryst4lliz3"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/_cryst4lliz3"
     - label: "cryst4lliz3"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/cryst4lliz3/"
