--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,9 @@ main:
     url: /posts/
   - title: "Categories"
     url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Projects"
+    url: /projects/
+  - title: "Notes"
+    url: /notes/
   - title: "About"
     url: /about/
