--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ahmad A'fif
-email: 
+email: ahmadafif.personal@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -45,7 +45,7 @@ plugins:
 author:
   name   : "Ahmad A'fif bin Zulkifli"
   avatar : "/assets/images/me.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "item happens ..."
   links:
     - label: "cryst4lliz3.github.io"
       icon: "fas fa-fw fa-link"
