--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,7 @@ main:
     url: /about/
   - title: "Categories"
     url: /categories/
+  - title: "Tags"
+    url: /tags/
   - title: "Posts"
     url: /posts/
