--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Ahmad A'fif
 email: ahmadafif.personal@gmail.com
 twitter_username: _cryst4lliz3
 github_username: cryst4lliz3
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dark
 search: true
 
 # Build settings
